fixed arrow bug on safari

--- a/garrettlesher_website/home/static/css/home_page.css
+++ b/garrettlesher_website/home/static/css/home_page.css
@@ -364,7 +364,7 @@
   margin: -8vh 0 0; 
 }
 
-@media (max-width: 1399px) {
+@media (min-width: 1399px) {
   .nameDesc svg {
     font: 4em 'Monda';
   }
